# indranet

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  TODO.md  base_brain_stroming.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-test.yml  ci.yml  release.yml
.pulse/: .gitignore  README.md  overview.md  pipeline.md  state.json  tasks.json  timeline.jsonl  wiki.json
docs/architecture/: overview.md
docs/onboarding/: host-setup.md  user-guide.md
docs/specs/: api-spec.md  host-agent-spec.md  marketplace-spec.md  sandbox-spec.md  streaming-spec.md
poc/: README.md
poc/01-screen-capture-encode/: CMakeLists.txt  README.md
poc/01-screen-capture-encode/src/: main.cpp
poc/02-webrtc-stream/: Dockerfile  README.md
poc/03-sandbox-test/: README.md  launch-sandbox.ps1  sandbox-config.wsb
poc/04-payment-gate/: Dockerfile  README.md
research/: README.md
research/01-screen-capture/: README.md  benchmarks.md  dxgi-notes.md  pipewire-notes.md
research/02-video-encoding/: README.md  amd-amf-notes.md  codec-comparison.md  ffmpeg-pipeline.md  nvenc-notes.md
research/03-streaming-transport/: README.md  latency-targets.md  nat-traversal.md  quic-notes.md  webrtc-notes.md
research/04-sandboxing/: README.md  gpu-passthrough.md  hyperv-dda.md  kvm-vfio.md  security-model.md  windows-sandbox.md
scripts/: dev.sh  gen-lockfiles.sh  reset-db.sh  setup.ps1  setup.sh
(+30 files in other folders)
